--- a/style.css
+++ b/style.css
@@ -107,6 +107,10 @@ body:has(.commit:hover)::before {
     font-size: 1.5rem;
 }
 
+.small {
+    font-size: 1rem;
+}
+
 .center-left {
     display: flex;
     align-items: start;
