--- a/style.css
+++ b/style.css
@@ -141,21 +141,21 @@ body:has(.commit:hover)::before {
     margin: 1.2rem 0 2rem 1rem;
 }
 
-.commit a {
+a {
     color: var(--text-hl);
     text-decoration: none;
 }
 
-.commit a:hover,
-.commit a:focus {
+a:hover,
+a:focus {
     text-decoration: underline;
 }
 
-.commit a:active {
+a:active {
     color: var(--text);
 }
 
-.commit a:visited {
+a:visited {
     color: var(--text-visited);
 }
 
@@ -199,4 +199,31 @@ body:has(.commit:hover)::before {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#socials {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    font-size: 1.2rem;
+    opacity: 0.85;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: end;
+}
+
+#socials:hover {
+    opacity: 1;
+}
+
+#socials a {
+    margin-bottom: 0.5rem;
+}
+
+@media (max-width: 1250px) {
+    #socials {
+        position: absolute;
+    }
 }
