--- a/style.css
+++ b/style.css
@@ -124,7 +124,13 @@ body:has(.checkout:hover)::before {
     font-size: 2rem;
     padding: 1rem 0;
 
+    margin-top: 4rem;
+
     border-bottom: solid 1px var(--surface-3);
+}
+
+.no-margin-top {
+    margin-top: 0;
 }
 
 .commit {
